--- a/help/button_functions.html
+++ b/help/button_functions.html
@@ -20,7 +20,18 @@
 
 
 
-<h2 style="page-break-after:auto">Button Functions</h2>
+<TABLE BORDER="0" WIDTH="100%">
+  <TR>
+    <TD WIDTH="100%" BGCOLOR="#C0C0C0">
+      <H2><FONT FACE="Arial">Hack-It v4.0 Help</FONT></H2>
+    </TD>
+  </TR>
+  <TR>
+    <TD WIDTH="100%" BGCOLOR="#000000"><FONT COLOR="#FFFFFF" FACE="Arial"><B>Button
+      Functions</B></FONT></TD>
+  </TR>
+  <TR>
+    <TD WIDTH="100%">
 
 <p style="page-break-after:auto">Button operations are the first in a series of
 
@@ -36,13 +47,22 @@ boxes, and the like.</p>
 
     <p style="page-break-after:auto"><b>Press Button</b> – Presses the button
 
-    represented by the selected window.<o:p>
-
-    </o:p>
+    represented by the selected window
 
   </li>
 
 </ul>
+
+
+
+    </TD>
+  </TR>
+  <TR>
+    <TD WIDTH="100%" BGCOLOR="#000080">
+      <P ALIGN="center"><FONT FACE="Arial" COLOR="#FFFFFF"><B>Copyright 2002,
+      Headius Incorporated</B></FONT></TD>
+  </TR>
+</TABLE>
 
 
 
