--- a/help/general_tab.html
+++ b/help/general_tab.html
@@ -20,11 +20,18 @@
 
 
 
-<h2 style="text-indent:0in">General tab<o:p>
-
-</o:p>
-
-</h2>
+<TABLE BORDER="0" WIDTH="100%">
+  <TR>
+    <TD WIDTH="100%" BGCOLOR="#C0C0C0">
+      <H2><FONT FACE="Arial">Hack-It v4.0 Help</FONT></H2>
+    </TD>
+  </TR>
+  <TR>
+    <TD WIDTH="100%" BGCOLOR="#000000"><FONT COLOR="#FFFFFF" FACE="Arial"><B>General
+      Settings Tab</B></FONT></TD>
+  </TR>
+  <TR>
+    <TD WIDTH="100%">
 
 <p class="MsoBodyTextIndent2">The general tab contains settings for configuring
 
@@ -38,65 +45,69 @@ behave.<o:p>
 
 </p>
 
-<ul>
-
-  <li>
-
-    <p class="MsoBodyTextIndent2"><b>Hide Hack-It on Startup</b> - Sets whether the
-
-    Hack-It main window will be displayed on start-up. Default is off
-
-    (Unchecked).</li>
-
-  <li>
-
-    <p class="MsoBodyTextIndent2"><b>Show Splash Screen On Startup</b> - Sets whether
-
-    the splash screen is shown when Hack-It is started. Default is on (Checked).</li>
-
-  <li>
-
-    <p class="MsoBodyTextIndent2"><b>Auto Functions Enabled</b> – If you do not use
-
-    Autofunctions, and would like to turn them off, this is the place to do it.
-
-    Default is on (Checked).</li>
-
-  <li>
-
-    <p class="MsoBodyTextIndent2"><b>Auto Functions Affect Children</b> – You can
-
-    specify that Autofunctions should also apply to (match) child windows.
-
-    Default is off (Unchecked).</li>
-
-  <li>
-
-    <p class="MsoBodyTextIndent2"><b>Hack-It Window Always On Top</b> – If you would
-
-    like the Hack-It main window to have topmost status, set this option.
-
-    Default is off (Unchecked).</li>
-
-  <li>
-
-    <p class="MsoBodyTextIndent2"><b>Hack-It Priority</b> – Select one of the four
-
-    options to set the process priority of Hack-It. Higher settings reserve more
-
-    processor time for Hack-It. Default is Normal.</li>
-
-  <li>
-
-    <p class="MsoBodyTextIndent2"><b>Hack-It Font</b> – You can choose what font is
-
-    used in the Window List. Default is the same font your system has designated
-
-    for windows.</li>
-
-</ul>
-
-<p class="MsoBodyTextIndent2" style="text-indent: -.25in; mso-list: l30 level1 lfo26; tab-stops: list .25in; margin-left: .25in"><img border="0" src="images/generaltab.gif" width="427" height="338"></p>
+      <P CLASS="MsoNormal" ALIGN="center"><IMG BORDER="0" SRC="images/general_tab.png" width="427" height="383"></P>
+      <P CLASS="MsoNormal"><B><A NAME="HideHack-ItStartup">Hide Hack-It on
+      Startup</A>:</B> This causes Hack-It to hide itself when first starting
+      up. The default is Off/Unchecked.<o:p>
+      </o:p>
+      </P>
+      <P CLASS="MsoNormal"><B><A NAME="ShowSplashScreenStartup">Show Splash
+      Screen at Startup</A>:</B> This causes Hack-It to show its splash screen
+      at startup. The default is On/Checked.<o:p>
+      </o:p>
+      </P>
+      <P CLASS="MsoNormal"><B><A NAME="AutoFunctionsEnabled">Auto Functions
+      Enabled</A>:</B> Checking this box enables Automatic Functions system
+      wide. Unchecking it cause Automatic Functions to not be used. The default
+      is On/Checked.<o:p>
+      </o:p>
+      </P>
+      <P CLASS="MsoNormal"><B><A NAME="AutoFunctionsCanAffectChildren">Auto
+      Functions Can Affect Children</A>:</B> Normally, autofunctions will only
+      affect top-level windows. By checking this box, autofunctions will be
+      checked for matches against child windows as well, if they are not already
+      limited to top-level windows as part of their specification. In order to
+      have autofunctions affect child windows, you must check this box AND
+      deselect the ‘Match Top-Level Windows Only’ box in the autofunction
+      itself. The default is Off/Unchecked.<o:p>
+      </o:p>
+      </P>
+      <P CLASS="MsoNormal"><B><A NAME="Hack-ItWindowAlwaysOnTop">Hack-It Window
+      Always On Top</A>:</B> Checking this box causes the Hack-It window to have
+      Topmost status, staying on top of other windows. Unchecking it removes
+      this status. The default is Off/Unchecked.<o:p>
+      </o:p>
+      </P>
+      <P CLASS="MsoNormal"><B><A NAME="Hack-ItWindowTransparent">Hack-It Window
+      Transparent</A>:</B> Checking this box and setting a transparency level
+      causes the Hack-It window to be drawn semi-transparent. The default is
+      Off/Unchecked. This feature is only available under Windows 2000 and
+      Windows XP.<o:p>
+      </o:p>
+      </P>
+      <P CLASS="MsoNormal"><B><A NAME="TransparencyPercent">Transparency Percent</A>:</B>
+      This box allows you to set the transparency of Hack-It’s main window.
+      The default is 20%. This feature is only available under Windows 2000 and
+      Windows XP.<o:p>
+      </o:p>
+      </P>
+      <P CLASS="MsoNormal"><B><A NAME="Hack-ItPriority">Hack-It Priority</A>:</B>
+      To allow Hack-It to respond more quickly to system events (window
+      creation, etc) you can set its priority to a higher level. To force
+      Hack-It to use less processor time, you can set its priority to a lower
+      level. The default is ‘Normal’.<o:p>
+      </o:p>
+      </P>
+      <P CLASS="MsoNormal"><B><A NAME="Hack-ItFont">Hack-It Font</A>:</B>
+      Pressing this button allows you to select the font used to display window
+      titles in the Window List. The default is your system’s window font.</TD>
+  </TR>
+  <TR>
+    <TD WIDTH="100%" BGCOLOR="#000080">
+      <P ALIGN="center"><FONT COLOR="#FFFFFF" FACE="Arial"><B>Copyright 2002,
+      Headius Incorporated</B></FONT></TD>
+  </TR>
+</TABLE>
 
 
 
