--- a/help/hack-it_functions.html
+++ b/help/hack-it_functions.html
@@ -20,7 +20,18 @@
 
 
 
-<h2 style="text-indent:0in">Hack-It Functions</h2>
+<TABLE BORDER="0" WIDTH="100%">
+  <TR>
+    <TD WIDTH="100%" BGCOLOR="#C0C0C0">
+      <H2><FONT FACE="Arial">Hack-It v4.0 Help</FONT></H2>
+    </TD>
+  </TR>
+  <TR>
+    <TD WIDTH="100%" BGCOLOR="#000000"><FONT COLOR="#FFFFFF" FACE="Arial"><B>Hack-It
+      Functions</B></FONT></TD>
+  </TR>
+  <TR>
+    <TD WIDTH="100%">
 
 <ul>
 
@@ -49,6 +60,17 @@
   </li>
 
 </ul>
+
+
+
+    </TD>
+  </TR>
+  <TR>
+    <TD WIDTH="100%" BGCOLOR="#000080">
+      <P ALIGN="center"><FONT FACE="Arial" COLOR="#FFFFFF"><B>Copyright 2002,
+      Headius Incorporated</B></FONT></TD>
+  </TR>
+</TABLE>
 
 
 
