--- a/help/window_functions.html
+++ b/help/window_functions.html
@@ -20,7 +20,18 @@
 
 
 
-<h2 style="page-break-after:auto">Window Functions</h2>
+<TABLE BORDER="0" WIDTH="100%">
+  <TR>
+    <TD WIDTH="100%" BGCOLOR="#C0C0C0">
+      <H2><FONT FACE="Arial">Hack-It v4.0 Help</FONT></H2>
+    </TD>
+  </TR>
+  <TR>
+    <TD WIDTH="100%" BGCOLOR="#000000"><FONT COLOR="#FFFFFF" FACE="Arial"><B>Window
+      Functions</B></FONT></TD>
+  </TR>
+  <TR>
+    <TD WIDTH="100%">
 
 <ul>
 
@@ -30,31 +41,40 @@
 
 tab-stops:list .25in"><b>Restore</b> – Restores the selected window to its
 
-    non-minimized and non-maximized (floating) size and position.</li>
+    non-minimized and non-maximized (floating) size and position</li>
 
   <li>
 
     <p class="MsoNormal" style="margin-left:.25in;text-indent:-.25in;mso-list:l41 level1 lfo37;
 
-tab-stops:list .25in"><b>Minimize</b> – Minimizes the selected window.</li>
+tab-stops:list .25in"><b>Minimize</b> – Minimizes the selected window</li>
 
   <li>
 
     <p class="MsoNormal" style="margin-left:.25in;text-indent:-.25in;mso-list:l41 level1 lfo37;
 
-tab-stops:list .25in"><b>Maximize</b> – Maximizes the selected window.</li>
+tab-stops:list .25in"><b>Maximize</b> – Maximizes the selected window</li>
 
   <li>
 
     <p class="MsoNormal" style="margin-left:.25in;text-indent:-.25in;mso-list:l41 level1 lfo37;
 
-tab-stops:list .25in"><b>Close</b> – Closes the windows<o:p>
-
-    </o:p>
+tab-stops:list .25in"><b>Close</b> – Closes the window
 
   </li>
 
 </ul>
+
+
+
+    </TD>
+  </TR>
+  <TR>
+    <TD WIDTH="100%" BGCOLOR="#000080">
+      <P ALIGN="center"><FONT FACE="Arial" COLOR="#FFFFFF"><B>Copyright 2002,
+      Headius Incorporated</B></FONT></TD>
+  </TR>
+</TABLE>
 
 
 
