--- a/help/window_list_tab.html
+++ b/help/window_list_tab.html
@@ -14,152 +14,158 @@
 
 
 
-<h2>Window Control tab</h2>
-
-<ul>
-
-  <li>
-
-    <b>
-
-    Custom Window Menus</b> – This option enables the custom
-
-    System Menu entries that Hack-It can provide. These entries will appear in
-
-    the system menu of any desktop window, and can be chosen from the following
-
-    options:
-
-    <ul>
-
-      <li>
-
-    <b>
-
-    Visible/Hidden Toggle</b> – This will add an entry
-
-    “Visible” to the system menu of every desktop window that can be used to
-
-    change the hidden status of the window the window whenever you like. The
-
-    check mark shows whether the window is currently visible.</li>
-
-      <li>
-
-    <b>
-
-    Topped/UnTopped Toggle</b> – This adds an entry “Topped”
-
-    to the system menu of every desktop window. The check mark beside the entry
-
-    shows whether the window is currently topmost or not.</li>
-
-      <li>
-
-    <b>
-
-    Trayyed/UnTrayyed Toggle</b> – This entry “Trayyed”
-
-    toggles the Hack-It provided System Tray icon. The check mark shows whether
-
-    Hack-It is providing a tray icon for this window.</li>
-
-      <li><b>Process Priority Settings</b> – This adds a sub-menu to the menu of any
-
-    desktop window’s system menu allowing you to set the process priority of
-
-    the process that controls that window. The available priorities are as in
-
-    the Window List popup: Highest, High, Normal, or Low.</li>
-
-    </ul>
-
-  </li>
-
-  <li>
-
-    <b>
-
-    Refresh Window Text</b> – This option specifies whether
-
-    Hack-It will keep the text of items in the windows list updated. Note: Many windows will be initially added to the
-
-    list with no title, since at first creation many windows do not report one.
-
-    If this option is turned off, they will not update to the actual title of
-
-    the window. The phenomenon comes into play with Automatic Functions as well.
-
-  </li>
-
-  <li>
-
-    <b>Poll for Console Windows</b> - Console windows (Command Prompts) in some
-    versions of Windows are not detected when they appear. Turning this option
-    on sets a timer to poll for these windows and add them to the list.
-
-  </li>
-
-  <li>
-
-    <b>Console Window Poll Refresh</b> - This sets the time, in milliseconds,
-    between console window polls.
-
-  </li>
-
-  <li>
-
-    <b>Poll for Orphaned Items</b> - Under some versions of Windows, when a
-    program unexpectedly crashes or is forcibly terminated, Hack-It will not be
-    notified of the window's destruction. Turning on this option will set a
-    timer to remove these orphaned items from the window list automatically.
-    Note: This poll only checks for orphaned top-level windows. Child windows
-    should not need this feature.
-
-  </li>
-
-  <li>
-
-    <b>Orphaned Item Poll Refresh</b> - This sets the time, in milliseconds,
-    between orphaned window polls.
-
-  </li>
-
-  <li><b>Show Topmost Children In Topmost List</b> - When a parent window has a topmost
-
-    child, this option will make sure that child is listed in the Topmost list.
-
-    Default is off (unchecked).</li>
-
-  <li><b>Show Top-Level Nameless Windows</b> - There are many top-level windows -
-
-    especially of the hidden kind - that do not have titles. This option allows
-
-    you to specify whether or not they will be added to the window list.</li>
-
-  <li><b>Update of Window Title can Add/Remove Tree Item</b> - If a window with no
-
-    title gains one, or if a window with a title loses it, this option specifies
-
-    that those windows will be added to or removed from the window list,
-
-    respectively.</li>
-
-  <li><b>Update of Window Title Can Cause Re-Check of Window Title</b> - If a window
-
-    title changes, this option specifies that the window will be re-scanned for
-
-    validity. If it turns out to no longer be a valid window for your
-
-    configuration, it will be removed from the window list.</li>
-
-  <li><b>Text to Show For Nameless Windows</b> - This is the text shown in the list for
-
-    windows that do not have a title. It can be anything you like.</li>
-
-</ul>
-
-<p><img border="0" src="images/windowtab.gif" width="427" height="338"></p>
+<TABLE BORDER="0" WIDTH="100%">
+  <TR>
+    <TD WIDTH="100%" BGCOLOR="#C0C0C0">
+      <H2><FONT FACE="Arial">Hack-It v4.0 Help</FONT></H2>
+    </TD>
+  </TR>
+  <TR>
+    <TD WIDTH="100%" BGCOLOR="#000000"><B><FONT COLOR="#FFFFFF" FACE="Arial">Window
+      Control Tab</FONT></B></TD>
+  </TR>
+  <TR>
+    <TD WIDTH="100%">
+      <P CLASS="MsoNormal" ALIGN="center"><B><IMG BORDER="0" SRC="images/window_control_tab.png" WIDTH="427" HEIGHT="383"></B></P>
+      <P CLASS="MsoNormal"><B><A NAME="CustomWindowMenus">Custom Window Menus</A>:</B>
+      This option enables the custom System Menu entries that Hack-It can
+      provide. These entries will appear in the system menu of any desktop
+      window, and can be chosen from the following options. The default is
+      On/Checked.<o:p>
+      </o:p>
+      </P>
+      <UL>
+        <LI>
+          <P CLASS="MsoNormal"><B><A NAME="VisibleHiddenToggle">Visible/Hidden
+          Toggle</A>:</B> This will add an entry “Visible” to the system
+          menu of every desktop window that can be used to hide the window
+          whenever you like. The check mark shows whether the window is
+          currently visible. The default is On/Checked.<o:p>
+          </o:p>
+        </LI>
+        <LI>
+          <P CLASS="MsoNormal"><B><A NAME="ToppedUnToppedToggle">Topped/UnTopped
+          Toggle</A>:</B> This adds an entry “Topped” to the system menu of
+          every desktop window that allows you to change the window’s topmost
+          status. The check mark beside the entry shows whether the window is
+          currently topmost or not. The default is On/Checked.<o:p>
+          </o:p>
+        </LI>
+        <LI>
+          <P CLASS="MsoNormal"><B><A NAME="TrayyedUnTrayyedToggle">Trayyed/UnTrayyed
+          Toggle</A>:</B> This adds an entry “Trayyed” that allows you to
+          toggle the Hack-It provided System Tray icon. The check mark shows
+          whether Hack-It is providing a tray icon for this window. See Trayying
+          a Window for more information on Trayying. The default is On/Checked.<o:p>
+          </o:p>
+        </LI>
+        <LI>
+          <P CLASS="MsoNormal"><B><A NAME="ProcessPrioritySetting">Process
+          Priority Setting</A>:</B> This adds a sub-menu to the menu of any
+          desktop window’s system menu allowing you to set the process
+          priority of the process that controls that window. The available
+          priorities are: Highest, High, Normal, or Low. The default is
+          On/Checked.<o:p>
+          </o:p>
+        </LI>
+        <LI>
+          <P CLASS="MsoNormal"><B><A NAME="Transparency">Transparency</A>:</B>
+          This adds a sub-menu to system menu of any top-level window allowing
+          you to set that window’s transparency. The default is On/Checked.
+          This feature is only available under Windows 2000 and Windows XP.<o:p>
+          </o:p>
+        </LI>
+      </UL>
+      <P CLASS="MsoNormal"><B><A NAME="RefreshWindowText">Refresh Window Text</A>:</B>
+      This option specifies whether Hack-It will keep the text of items in the
+      windows list updated. Note: Many windows will be initially added to the
+      list with no title, since at first creation many windows do not report
+      one. If this option is turned off, they will not update to the actual
+      title of the window. If you do not have Hack-It set to Show Top-Level
+      Nameless Windows, the window would never appear in the list. Turning this
+      feature off reduces the amount of processor time that Hack-It uses
+      slightly, but can have other adverse effects. The default is On/Checked.<B><o:p>
+      </o:p>
+      </B></P>
+      <P CLASS="MsoNormal"><B><A NAME="PollConsoleWindows">Poll for Console
+      Windows</A>:</B> Console windows (Command Prompts) in some versions of
+      Windows are not detected when they appear. Turning this option on sets a
+      timer to poll for these windows and add them to the list. The default is
+      On/Checked.<B><o:p>
+      </o:p>
+      </B></P>
+      <P CLASS="MsoNormal"><B><A NAME="ConsoleWindowPollRefresh">Console Window
+      Poll Refresh</A>:</B> This sets the time, in milliseconds, between console
+      window polls. The default is 500ms.<B><o:p>
+      </o:p>
+      </B></P>
+      <P CLASS="MsoNormal"><B><A NAME="PollOrphanedItems">Poll for Orphaned
+      Items</A>:</B> Under some versions of Windows, when a program unexpectedly
+      crashes or is forcibly terminated, Hack-It will not be notified of the
+      window's destruction. Turning on this option will set a timer to remove
+      these orphaned items from the window list automatically. This also removes
+      console windows (command prompts) from the list, since Hack-It is
+      sometimes not notified that they have been closed. Note: This poll only
+      checks for orphaned top-level windows. Child windows should not need this
+      feature. The default is On/Checked.<B><o:p>
+      </o:p>
+      </B></P>
+      <P CLASS="MsoNormal"><B><A NAME="OrphanedItemPollRefresh">Orphaned Item
+      Poll Refresh</A>:</B> This sets the time, in milliseconds, between
+      orphaned window polls. The default is 1000ms.<B><o:p>
+      </o:p>
+      </B></P>
+      <P CLASS="MsoNormal"><B><A NAME="AppendCustomWindowMenuItems">Append
+      Custom Window Menu Items</A>:</B> Hack-It normally adds custom system menu
+      items at the beginning of the menu. Some applications depend on the order
+      of items in their system/window menus to always stay the same (VMWare is
+      such an application). Checking this box causes custom system menu items to
+      be added at the end of the menu, rather than the beginning. The default is
+      Off/Unchecked.<B><o:p>
+      </o:p>
+      </B></P>
+      <P CLASS="MsoNormal"><B><A NAME="ShowTopmostChildrenInTopmostList">Show
+      Topmost Children In Topmost List</A>:</B> When a parent window has a
+      topmost child, this option will make sure that child is listed in the
+      Topmost list. Default is Off/Unchecked.<B><o:p>
+      </o:p>
+      </B></P>
+      <P CLASS="MsoNormal"><B><A NAME="ShowTopLevelNamelessWindows">Show
+      Top-Level Nameless Windows</A>:</B> There are many top-level windows –
+      especially<SPAN STYLE="mso-spacerun: yes">&nbsp; </SPAN>hidden ones - that
+      do not have titles. This option allows you to specify whether or not they
+      will be added to the window list. The default is Off/Unchecked.<B><o:p>
+      </o:p>
+      </B></P>
+      <P CLASS="MsoNormal"><B><A NAME="UpdateWindowTitleAddRemoveTreeItem">Update
+      of Window Title can Add/Remove Tree Item</A>:</B> When a window’s title
+      changes, the new title may qualify it to be shown in the window list, or
+      similarly disqualify it. Checking this box causes Hack-It to add or remove
+      windows as appropriate when their titles change. The default is
+      Off/Unchecked.<B><o:p>
+      </o:p>
+      </B></P>
+      <P CLASS="MsoNormal"><B><A NAME="UpdatWindowTitleCanCauseReCheckWindowTitle">Update
+      of Window Title Can Cause Re-Check of Window Title</A>:</B> When a
+      window’s title changes, the new title may match an autofunction that it
+      did not match before. Checking this box causes Hack-It to re-run
+      autofunctions against this window to check for a match when the window’s
+      title changes. The default is Off/Unchecked.<B>&nbsp;<o:p>
+      </o:p>
+      </B></P>
+      <P CLASS="MsoNormal"><B><A NAME="TextShowForNamelessWindows">Text to Show
+      For Nameless Windows</A>:</B> This is the text shown in the list for
+      windows that do not have a title. It can be anything you like. The default
+      is “&lt;no title&gt;”.<o:p>
+      </o:p>
+    </TD>
+  </TR>
+  <TR>
+    <TD WIDTH="100%" BGCOLOR="#000080">
+      <P ALIGN="center"><B><FONT COLOR="#FFFFFF" FACE="Arial">Copyright 2002,
+      Headius Incorporated</FONT></B></TD>
+  </TR>
+</TABLE>
 
 </body>
 
